# RMP220-SDK

ROS2/src/segway_msgs/msg/: ChassisModeFb.msg
ROS2/src/segwayrmp/: CMakeLists.txt  package.xml
ROS2/src/segwayrmp/include/segwayrmp/: controller.h  robot.h
ROS2/src/segwayrmp/launch/: segway_controller.launch.py
ROS2/src/segwayrmp/src/: SmartCar.cpp  controller.cpp  robot.cpp
